# tweaker

./: AGENTS.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
assets/: demo.cast
src/: history.rs  main.rs  state.rs  suggestions.rs  tokens.rs  tui.rs
