[package]
name = "tweaker"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "tweaker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
shell-words = "1"
dirs = "5"

[dev-dependencies]
insta = "1"
tempfile = "3"
